Thu Feb  2 23:55:01 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * NEWS
        
          Updated the release notes. 

Thu Feb  2 22:59:23 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/ZIP_Wrapper.cpp
        
          Updated include from zziplib.h to zzip/zzip.h, as the former
          is deprecated and absent in the most recent release.

Thu Feb  2 15:49:31 2006  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* docs/tutorials/CoSMIC/01.html: Commited a fix for a typo detected by
	  Abdullah Sowayan <abdullah dot sowayan at lmco dot com> and
 	  fixed by Ming Xiong.

Thu Feb  2 16:58:15 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
        * CIAODAnCE.mwc:
          Removed Old_Config_Handlers and spec_RepositoryManager

Thu Feb  2 16:31:15 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/BaseMonitor.h
        * DAnCE/NodeManager/CIAO_Monitor.h
        * DAnCE/NodeManager/MonitorCB.h
        * DAnCE/NodeManager/MonitorController.cpp
        * DAnCE/NodeManager/MonitorController.h
        * DAnCE/TargetManager/DomainDataManager.h

          Removed extra ';' after closing braces on namespaces.
          Was causing errors on GCC4 builds.

        * DAnCE/NodeManager/MonitorController.inl

          Removed this file, as it is no longer used.

Wed Feb  1 21:21:35 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/BaseMonitor.h
        * DAnCE/NodeManager/CIAO_Monitor.cpp
        * DAnCE/NodeManager/CIAO_Monitor.h
        * DAnCE/NodeManager/MonitorCB.cpp
        * DAnCE/NodeManager/MonitorCB.h
        * DAnCE/NodeManager/MonitorController.cpp
        * DAnCE/NodeManager/MonitorController.h
        * DAnCE/TargetManager/DomainDataManager.cpp
        * DAnCE/TargetManager/DomainDataManager.h
        * DAnCE/TargetManager/TargetManager_exec.cpp
        * DAnCE/TargetManager/TargetManager_exec.h
